tests/out/error/assign/underscore.in.bt
_ := 2
_var := 1
