tests/out/error/assign/underscore.out
tests/out/error/assign/underscore.in.bt:2:1 error: variable `_var` cannot start with `_`
